example/js/myfilefail.js
// global code
$("ok").onclick = okayClick; // error: $("ok") is null				   				   JS
function okayClick() {
	alert("booyah");
}	
